Cosmic ray draft 1 text completed(no citations)

--- a/thesis_skel/thesis_CRnEAS.tex
+++ b/thesis_skel/thesis_CRnEAS.tex
@@ -6,7 +6,9 @@
 %==============================================================================
 
 \section{Ultra High Energy Cosmic Rays}
+\label{sec:UHECR}
 \subsection{History}
+\label{subsec:crhist}
 As already mentioned in the introduction cosmic rays have been a source of investigation for more than a century now. Even before the balloon flight by Victor Hess it was Henry Becquerel, the discoverer of radioactivity who believed that the \textit{atmospheric electricity}(ionization of air) was due to the radioactive substances present on Earth. In such a scenario the ionization rate should decrease the higher up you go in the atmosphere. The first measurements disproving this theory were performed by Theodor Wulf in 1909 with his own developed electrometer. His measurements published in the \textit{Physikalische Zeitschrift} indicated a higher level of radiation at the top of the Eiffel Tower as compared to its base. Unfortunately the measurements were not widely accepted, and it would take three years till Victor Hess via his several balloon flights provided irrefutable measurements corroborating Wulf's observations.
 
 Between 1911-1912 Victor Hess performed nine(2 in 1911 and 7 in 1912) balloon flights going as high as 5350m a.s.l to measure the dependence of ionization rate to altitude. He carried with him three Wulf electrometers, two tuned for $\gamma$ rays and the third tuned for $\beta$ rays~\cite{}(1808.02927) which along with $\alpha$ were the only three known radioactive decays. His measurements published in the Proceedings of the Viennese Academy of Sciences~\cite{} showed that the radiation level decreased slightly up to a certain altitude (~1 km) but after this height the radiation increased significantly and at the highest flown altitudes reached levels about twice in comparison to the ones at sea level. Some of his measurements were done during the night and one during a partial solar eclipse which further made him rule out Sun as a source of this radiation. With further confirmations via the measurements by Werner Kolhörster in 1914 and Robert Millikan, in 1925, Victor Hess was awarded the Nobel Prize in Physics in 1936. 
@@ -16,12 +18,12 @@ Cosmic rays were still presumed to be gamma rays. This supposition was quickly n
 Today we use Cosmic Rays (CRs) to describe the highly energetic charged particles/nuclei travelling at very high speeds through space. The Earth is constantly bombarded by CRs some originating from the Sun but most of them from outside our Solar System. In more than 100 years since Victor Hess's balloon flight we have gathered a lot more information and have achieved a better understanding of CRs. We have detected CRs to energies ~$10^{20}$eV which is an impressive feat since at these energies the expected flux drops below one particle/$km^2$. We know a lot more about the composition of the CRs and have also proposed models explaining their origin and their journey to Earth. CRs continue to be a source of fascination. Some of the achievements are summarised below along with some unanswered questions about CRs. 
 
 \subsection{Origin}
-
+\label{subsec:crorig}
 To understand the sources for cosmic rays one needs to understand the mechanisms that could impart huge amounts of energies to the tiny particles that actually reach the Earth. We already know that the low energy cosmic rays which reach our Earth are predominantly coming from the Sun. The evidence for this comes from the observation of an increase in these with a coincidence to violent activity of the sun. Most of the CRs and UHECRs do not exhibit this temporal coincidence and are thought to have been originated in our Galaxy or beyond respectively. There are two different mechanisms which could explain how the cosmic rays particles are accelerated to such high energies over large distances: \textit{bottom-up} and \textit{top-down}. The \textit{top-down} approach assumes that the UHECRs are produced due to the decay or annihilation of extremely massive or exotic particles.
 Both of these mechanisms have been investigated with various experiments including the Pierre Auger Observatory. With the current observations the top-down models face significant challenges. The extremely high energies required for the annihilation of the hypothesised exotic particles and the lack of evidence for their existence makes it very difficult to both verify and rule out the top-down mechanism. The continued improvement in understanding of astro-particle physics and the early universe makes the study of UHECRs an exciting and active area for research with the mystery of their origin and propagation still looking for a solution. 
 
 \subsubsection{Bottom-up scenario}
-
+\label{subsec:Bupsce}
 There are many proposed ways in which CRs could get accelerated by astrophysical sources. One of the most widely accepted explanation which can explain most of the observed CRs which originate from our Galaxy is the diffusive shock acceleration also known as Fermi acceleration. Qualitatively one can explain Fermi acceleration as follows: When a massive star reaches the end of its life cycle it can undergo a supernova explosion. During this the star core collapses and an intense shockwave propagates outwards towards the star's outer layers. As the shock wave progresses and moves through the interstellar medium(ISM) it sweeps up and compresses the surrounding gas and magnetic fields creating a region of very high pressure and magnetic turbulence known as the shock front. The charged particles can get trapped in such a shock front and repeatedly cross over this region of magnetic turbulence experiencing magnetic irregularities and constantly changing direction in a collission-less way thus experiencing electric fields each time they cross which accelerate them to higher energies. An illustration is shown in fig. The shock front is turbulent, and particles can cross it multiple times, gaining energy at each passage. Eventually some particles can acquire enough energy to escape the shock region and travel the required distances to reach the Earth. Such an explanation can explain the CRs originating in our Galaxy and point towards supernovae and its remnants as potential sources but to explain the UHECRs(>1019eV) we need other sources and mechanisms. The energy that can be produced by the accelerator is limited by the gyroradius of the accelerator. This has been illustrated by Hillas~\cite{} where he illustrated the potential sources of CRs on a plot of magnetic field strength vs size. A modified version of his original plot with inclusion of modern sources is shown in fig.~\ref{fig:Bullet2}.   
 
 Other accelerating mechanisms are as follows:
@@ -43,6 +45,7 @@ Other accelerating mechanisms are as follows:
 The validity of all such hypothesised mechanisms can be checked by corroborating their spectral index predictions with that observed by the experiments. 
 
 \subsubsection{Top-down scenario}
+\label{subsec:Tdownsce}
 This is an alternative approach to explain UHECRs. The main idea behind these models is that the UHECRs are produced due to the decay or interaction of hypothetical, supermassive, or exotic particles that were produced in the early universe Some of the proposed hypothesis are mentioned below:
 
 \todo{Citations needed ...}
@@ -56,10 +59,11 @@ This is an alternative approach to explain UHECRs. The main idea behind these mo
 There are other scenarios such as breakdown of Lorentz invariance which attack the problem of UHECRs not by suggesting a new mechanism for their production but their propagation which can also have a major effect to the observations of CRs and UHECRs we observe at Earth. Some of these models can be constrained by again looking at the flux of the UHECRs. There are also experiments which try to directly look for these exotic particles~\cite{}. So far, no evidence has been found to support the existence of these particles. 
 
 \subsection{Propagation}
-
+\label{subsec:crprop}
 However, production is just one part in the life of a CR/UHECRs. To get detected at Earth the CRs and UHECRs have to travel large distances through ISM during which they can suffer various loses which ultimately affects the spectrum we see on Earth. Some main processes include losses by ionization due to collision with ISM, Coulomb Scattering which can cause random changes to the direction, Synchrotron Radiation which can lead to emission of high energy photons and, consequently, energy loss for the cosmic ray particle and through collisions with high-energy photons from radiation fields leading to breakage of CR nuclei also known as Photodisintegration. Other propagation effects such as Bremsstrahlung and Inverse Compton Scattering due to interactions with the cosmic microwave background radiation(CMB)  are the reasons high energy cosmic ray electrons cannot propagate large distances. Few other mechanisms include Adiabatic Energy Loss which can occur when a CR particle traverses through regions of high pressure or magnetic field strength to regions of lower pressure and magnetic field strength leading to a decrease in its velocity, Scattering due to going through magnetic turbulent areas or even an escape of UHECRs from our Galaxy can all affect the spectrum of CRs and UHECRs we see at Earth. One of the critical phenomenon to understand the cosmic ray propagation and to realize a theoretical limit to the energy of UHECRs is the Greisen-Zatsepin-Kuzmin (GZK) cutoff. This is discussed in more details below.
 
-\paragraph{GZK Limit} 
+\subsubsection{GZK Limit}
+\label{subsubsec:GZK} 
 The GZK cutoff was first proposed by Kenneth Greisen, an American physicist in 1966 in a paper titled "End to the Cosmic-Ray Spectrum?"~\cite{}. He discussed the potential energy loss of high-energy cosmic rays due to interactions with the CMB. He calculated a threshold energy above which cosmic rays in his case protons would lose energy through interactions with CMB. In the same year, two Soviet physicists, Georgiy Zatsepin and Vadim Kuzmin, arrived at a similar prediction. Their calculations published in their paper "Upper Limit of the Spectrum of Cosmic Rays"~\cite{} were consistent with Griesen's work and reinforced the concept of GZK cutoff.  
 The energy cutoff calculated is about 5 x $10^{19}$ electronvolts(eV) or about 8 joules. The dominant mechanisms via which the proton can interact with the photons of the CMB are given below. 
 
@@ -83,9 +87,11 @@ Even though, Pierre Auger Observatory observes a suppression in the cosmic ray s
 The production of UHE$\nu$ arising from the pions produced during the Photopion interaction are discussed later. 
 
 \subsection{Latest results}
+\label{subsec:CRreults}
 The study of CRs to constrain their properties and the relevant sources requires measurements on Earth. The measurements which provide valuable information are the energy spectrum or flux observed at Earth, composition of the primary CRs arriving at Earth, their arrival direction and other relevant observations such as measurement of other messengers such as high energy photons and neutrons. These measurements and their implications are discussed in more detail below. The UHE$\nu$, relevant for this thesis are discussed in a separate section. 
 
 \subsubsection*{Cosmic Ray spectrum}
+\label{subsubsec:CRspectrum}
 The cosmic ray spectrum measured by several experiments on Earth is summarised in figure.~\ref{}. Extending in energy from a few ~100 MeV(solar CRs) it spans about 12 orders of magnitude up till the highest observed CRs ~$10^{20}$eV. The flux decreases with increasing energy and follows a varying power law description:
 \begin{equation}\label{eq:Pdisinteg}
   \frac{dN}{dE} \propto E^{-\gamma}   
@@ -96,13 +102,43 @@ To better deduce the features in the cosmic ray spectrum one can scale the flux 
 
 1. GZK Limit: One of the most prevalent ideas behind the suppression and the cutoff is the GZK mechanism which was discussed above. Due to the observations of CRs above the cutoff of ~$10^{19}$eV by the Pierre Auger Observatory and a non-observance of expected composition(non proton primaries) and neutrino flux(GZK pion decay), GZK as the only reason for the observed cutoff in the spectrum is currently disfavored. However, tensions between the composition measurements of the Pierre Auger Observatory and the Telescope Array(TA), second-largest CR observatory, makes this topic still a subject of debate.
 
-2. Maximum Rigidity: In this scenario the cutoff is due to the sources of the extragalactic CRs reaching their maximum potential for acceleration for different particles i.e maximum rigidity. Such a scenario is already observed in the spectrum for Galactic sources(\textit{knee}). An indirect proof of this mechanism can come from the observed composition from the \textit{ankle} region to the cutoff. If the composition shifts from lighter to heavier nuclei then this would be a proof of a cutoff at the potential extragalactic sources. 
+2. Maximum Rigidity: In this scenario the cutoff is due to the sources of the extragalactic CRs reaching their maximum potential for acceleration for different particles i.e maximum rigidity. Such a scenario is already observed in the spectrum for Galactic sources(\textit{knee}). An indirect proof of this mechanism can come from the observed composition from the \textit{ankle} region to the cutoff. If the composition shifts from lighter to heavier nuclei this would be a proof of a cutoff at the potential extragalactic sources. 
 
 3. Photo-disintegration: This effect was also discussed before in sec.~\ref{}. However, for such a scenario the cutoff would appear in steps depending on the mass of the nuclei. 
 
-It is likely that the cutoff and the suppression is not just because of one of the above-mentioned scenarios but is due to a combination of all the three. In theory, GZK and Photo-disintegration could explain the observed spectrum but the non-observance of GZK neutrinos and the composition measurements gather otherwise. It also shows that even though the CR spectrum gives a very nice overview other crucial measurements of composition and multi-messengers play an equally important ally to the spectrum measurements for constraining the origin and propogation of CRs.
+It is likely that the cutoff and the suppression is not just because of one of the above-mentioned scenarios but is due to a combination of all the three. In theory, GZK and Photo-disintegration could explain the observed spectrum but the non-observance of GZK neutrinos and the composition measurements gather otherwise. It also shows that even though the CR spectrum gives a very nice overview other crucial measurements of composition and multi-messengers play an equally important ally to the spectrum measurements for constraining the origin and propagation of CRs.
 
 \subsubsection*{Cosmic Ray composition}
+\label{subsubsec:CRcompo}
+The types of particles the cosmic ray flux at Earth is made up of is called the cosmic ray composition. Such measurements with respect to energy offers a very useful insight into their origin. Direct measurement of the primaries is only possible for low energies and one e.g. is the AMS detector at the International Space Station~\cite{}. For higher energies the mass of the primary is reconstructed by measuring the phenomenon of Extensive Air Shower(EAS) which is described in more detail in Chapter~\ref{}. EASs are created when high-energy cosmic rays interact with the Earth's atmosphere producing a cascade of particles resembling a shower.  Depending on the mass of the primary, the EAS induced in the atmosphere by the said primary has characteristic differences. For the same energy lighter nuclei such as protons will interact and produce an EAS much deeper in the atmosphere compared to heavy nuclei such as iron. There are various ways one could estimate the mass of the primary. The estimator used for this at the Pierre Auger Observatory is <$X_{max}$> which is the average depth at which the EAS development in the atmosphere reaches a maximum. The <$X_{max}$> values are also energy dependent, and it is observed that iron nuclei typically have values ~100 g $cm^{-2}$ lower than proton. The fluctuation in the spread can also be used to gauge the mass. For e.g. fewer fluctuations are expected for iron compared to proton. Other quantities such as the lateral distribution of the shower which is just the number of particles in a shower as a function of distance from the point of first interaction (core) also shows differences based on the primaries. For lighter primaries the distribution is broader i.e the number of particles decrease more gradually with distance from the core compared to a narrower distribution in the case of heavier primaries. The ratio of electromagnetic to muonic components first used by KASCADE~\cite{} can also be used to differentiate between the primaries, the lighter primaries have a greater electromagnetic component whereas the heavier primaries have a greater muonic component in the initiated EAS.    
+
+The process of estimating the mass requires a very robust simulation that can reconstruct an EAS perfectly for a certain primary and a direct observation of $X_{max}$. At the Pierre Auger Observatory The Fluorescence Detector, cf. chapter ~\ref{}, is used to directly measure the $X_{max}$ on an event by event basis. The recent results from the Pierre Auger Observatory are shown in fig ~\ref{}. In both the figures the composition initially turns lighter and then seems to change from lighter to heavier nuclei at E~18.5 EeV. This could be an indication of the switch from a galactic component to an extragalactic component around the \textit{ankle} and then the maximum rigidity scenario as mentioned in the section above.
+
+However, the duty cycle of the Fluorescence Detector~14\% compared to the Surface detector~100\% leads to very limited statistics. Currently, this problem is solved by defining a new observable described in ~\cite{}(1710.07249.pdf) which has helped increase the number of events used to estimate the mass composition by nearly 14 times. The results for this are shown in fig.~\ref{}. Additionally, the energy dependent mass composition can be fitted simultaneously with the cosmic ray spectrum observed at the Pierre Auger Observatory with the only required assumption being about the model used to produce and propagate the cosmic rays from the sources. The result of one such analysis~\cite{} is shown in fig~\ref{}. With the current Pierre Auger Observatory measurements for different mass components are required to best described the data with proton component completely disfavored for highest energies. \todo{re-write after looking at the paper}  
+
+The future advancements of the AugerPrime which will further increase the capability of the Pierre Auger Observatory in measuring the mass composition. The addition of a Radio Detector can present an independent measurement of the $X_{max}$ offering an important crosscheck on the Fluorescence Detector measurement. 
+
+\subsubsection*{Cosmic Ray arrival directions}
+\label{subsubsec:CRdirec}
+Even though, the CRs are mostly charged particles and can easily get deflected by the magnetic fields~\cite{} present in the cosmos one can still estimate the arrival directions of these CRs with the help of a good pointing resolution and an understanding of these magnetic fields. The pointing resolution depends on the detector and the Pierre Auger Observatory already has an excellent pointing accuracy of ~$0.7^{\circ}$. The magnetic fields on the other hand are complicated to deduce and model. However, this lack of knowledge can be ignored by just looking at CRs of high energies since the expected deflections for such cosmic rays are expected to be small. At Pierre Auger Observatory the arrival directions of more than 2,600 CRs above 32EeV were estimated and analysed to look for potential sources of these CRs~\cite{}. The results are shown in fig.~\ref{} The figure clearly shows the presence of Anisotropies which are deviations from uniformity across the sky. The annisotropies are also pointed away from the Galactic centre indicating that the UHECRs have an extragalactic origin. The hypothesis is further confirmed by the increase in anisotropy with energy shown in ~\cite{}. The presence of these anisotropies not far from the Galactic spiral arm as shown in fig~\ref{} also give a further proof of an extragalactic origin of these UHECRs. Further, for low energies E> 0.03 EeV studies looking at large scale structures such as dipolar flux modulation in ~\cite{} also show a shift of the anisotropy dipole more towards the galactic center with decreasing energy with a significance of ~6$\sigma$. This can again be interpreted as a transition in CR sources from Galactic to extragalactic component. Even though this result is corroborated by the measurements done by KASCADE-Grande, IceCube and IceTop due to the decrease in sensitivity of the Pierre Auger experiment for these energies the result is not conclusive yet.
+
+Some proposed sources for these UHECRs due to observations of excess UHECRs in their surrounding regions by the Pierre Auger Observatory are presented in ~\cite{}(ICRC proceeding). These include the Centaurus A region(~4$\sigma$ significance), starburst galaxies(~3.8$\sigma$) such as NGC4945, M83 and NGC253. The Telescope Array has also found an excess close to the Perseus-Pisces supercluster(PPSC) with a significance of ~3.0-3.2$\sigma$. However, this is has been negated by the Pierre Auger Observatory and remains a topic of discussion. With the continued data taking and upgrade of the Pierre Auger Observatory the excess in the Centaurus A region is expected to reach a 5$\sigma$ significance by 2025 which could make it the first steady source of UHECRs ever observed. 
+ 
+
+\subsubsection*{Other Messengers}
+\label{subsubsec:CRmessengers}
+The scenarios for the production and propagation of CRs discussed above also predict production of other messengers such as photons, neutrinos and neutrons. Neutrons and photons are discussed in this section while neutrinos in section~ref{}. 
+Neutrons being neutral and thus not affected by the magnetic fields of the Universe during their propagation can be useful for arrival direction studies. THey are expected to be produced at the CR source via photopion production or other nuclear reactions near the sources. One such e.g. is a collision between a ultra high energy proton to an ambient proton/photon~\cite{}. Although, neutrons can lose significant amount of their acquired energy very quickly via $\beta$ decay(mean lifetime~879 s)~\cite{} but in the ultra-relativistic regime neutrons originated in our Galaxy can still make it to Earth. At Auger, a neutron produces a non-distinguishable EAS as compared to a proton. Hence, only a source catalog correlated search can be performed at the Pierre Auger Observatory. The results of such a search are given in~\cite{}(ICRC proceeding). No neutron like events have been found at Auger, but these results have already helped constrain some theorised production mechanisms for CRs. Future searches looking at transient or short-lived sources for neutrons are currently underway. 
+Photons again offer another window to look into the origin, propagation and the sources of the CRs. They can either be produced via interactions of CRs with matter or radiation fields or during propagation through interactions with the CMB as mentioned in sec.~\ref{subsec:crprop}. They along with neutrinos can also help constrain various top-down scenarios and help paint a more complete picture of the CR landscape. Observations for high energy photons have been carried out by specialised experiments such as ground-based Cherenkov telescopes like the High Energy Stereoscopic System (HESS)~\cite{}, Fermi Gamma-ray Space Telescope, and the upcoming Cherenkov Telescope Array (CTA). The Pierre Auger Observatory can also contribute to this search in the ultra high energy regime by looking for proton induced EAS. Such EASs are expected to be different from the ones induced by CRs as they have a larger electromagnetic component and a rather small hadronic component. A more detailed description of the signature is provided in~\cite{}. The results of a photon search performed at the Pierre Auger Observatory has been summarised in fig~\ref{} together with the predicted flux from some popular production models. Due to the on-observance of photon like events at Auger the collaboration has set some of the stringiest limits for expected photon flux at high energies. This has already helped constrain some top-down scenarios ultimately leading to a much better understanding of the origin of UHECRs. Further, searches will also help constrain the mystery of the cutoff. UHE photon searches are also very useful for a multimessenger approach to astronomy and these contributions are discussed more in section~\ref{}.
+
+
+\section{Ultra High Energy Neutrinos}
+\label{sec:UHENu}
+\subsection{History}
+
+
+
+
 
 
 
